[gd_scene load_steps=20 format=3 uid="uid://b0wf0flry67sd"]

[ext_resource type="Texture2D" uid="uid://b48o4vsapov1e" path="res://world/fauna/fish/fish_sprite_sheet_temp.png" id="1_bvx4f"]
[ext_resource type="Script" uid="uid://8cihjn5y2f4y" path="res://world/fauna/fish/fish.gd" id="2_k4md5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ltram"]
atlas = ExtResource("1_bvx4f")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqyiu"]
atlas = ExtResource("1_bvx4f")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytjf7"]
atlas = ExtResource("1_bvx4f")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0qef"]
atlas = ExtResource("1_bvx4f")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqg08"]
atlas = ExtResource("1_bvx4f")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_62kfb"]
atlas = ExtResource("1_bvx4f")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dufq"]
atlas = ExtResource("1_bvx4f")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjxaq"]
atlas = ExtResource("1_bvx4f")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vep7i"]
atlas = ExtResource("1_bvx4f")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsmm3"]
atlas = ExtResource("1_bvx4f")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4md5"]
atlas = ExtResource("1_bvx4f")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u4v5"]
atlas = ExtResource("1_bvx4f")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiyld"]
atlas = ExtResource("1_bvx4f")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_romm7"]
atlas = ExtResource("1_bvx4f")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou5bt"]
atlas = ExtResource("1_bvx4f")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jf8t"]
atlas = ExtResource("1_bvx4f")
region = Rect2(80, 160, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_qahfe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltram")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqyiu")
}],
"loop": true,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytjf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0qef")
}],
"loop": true,
"name": &"brown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqg08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62kfb")
}],
"loop": true,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dufq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjxaq")
}],
"loop": true,
"name": &"grey",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vep7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsmm3")
}],
"loop": true,
"name": &"navy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4md5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u4v5")
}],
"loop": true,
"name": &"orange",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiyld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_romm7")
}],
"loop": true,
"name": &"orange2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou5bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jf8t")
}],
"loop": true,
"name": &"pink",
"speed": 5.0
}]

[node name="Fish" type="AnimatedSprite2D"]
texture_filter = 1
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_qahfe")
animation = &"orange2"
speed_scale = 0.5
script = ExtResource("2_k4md5")

[node name="AliveTimer" type="Timer" parent="."]
one_shot = true

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AliveTimer" to="." method="_on_alive_timer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
